Valorant Page ready

--- a/valorant-page.html
+++ b/valorant-page.html
@@ -8,58 +8,224 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/animate.css">
 
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="assets/libs/swiper/swiper-bundle.min.css"/>
     
     <link rel="stylesheet" href="assets/css/valorantPage.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/media.css">
 </head>
 <body class="body__valorant">
 
     <section class="showcase">
+
+        <h2 class="showcase__header">Agent <span>Valorant</span></h2>
+
         <div class="showcase__conteint-wrapper">
             <div class="showcase__conteint">
 
-                <div class="showcase-Slayders">
+                <div class="showcase-carousel">
 
                     <div class="swiper-wrapper">
 
-                        <div class="swiper-slide swhocase-Slayders__item">
-                            <div class="showcase-Slayders__image-wrapper">
-                                <div class="showcase-Slayders__image-left">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                                <div class="showcase-Slayders__image-right">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                            </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Brimstone.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Brimstone.png);"></div>
+								</div>
+							</div>
+                            <p>Brimstone</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Viper.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Viper.png);"></div>
+								</div>
+							</div>
+                            <p>viper</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Omen.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Omen.png);"></div>
+								</div>
+							</div>
+                            <p>Omen</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Killjoy.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Killjoy.png);"></div>
+								</div>
+							</div>
+                            <p>KillJoY</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Cypher.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Cypher.png);"></div>
+								</div>
+							</div>
+                            <p>Cypher</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Sova.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Sova.png);"></div>
+								</div>
+							</div>
+                            <p>soVA</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Sage.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Sage.png);"></div>
+								</div>
+							</div>
+                            <p>SAGe</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Phoenix.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Phoenix.png);"></div>
+								</div>
+							</div>
+                            <p>phoeNix</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Jett.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Jett.png);"></div>
+								</div>
+							</div>
                             <p>Jett</p>
                         </div>
-
-                        <div class="swiper-slide swhocase-Slayders__item">
-                            <div class="showcase-Slayders__image-wrapper">
-                                <div class="showcase-Slayders__image-left">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                                <div class="showcase-Slayders__image-right">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                            </div>
-                            <p>Jett</p>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Rayna.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Rayna.png);"></div>
+								</div>
+							</div>
+                            <p>Reyna</p>
                         </div>
-
-                        <div class="swiper-slide swhocase-Slayders__item">
-                            <div class="showcase-Slayders__image-wrapper">
-                                <div class="showcase-Slayders__image-left">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                                <div class="showcase-Slayders__image-right">
-                                    <div class="showcase-Slayders__image" style="background-image: url(.//assets/img/imagesAnimation/1.png);"></div>
-                                </div>
-                            </div>
-                            <p>Jett</p>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Raze.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Raze.png);"></div>
+								</div>
+							</div>
+                            <p>RaZe</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Breach.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Breach.png);"></div>
+								</div>
+							</div>
+                            <p>BreAch</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Skye.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Skye.png);"></div>
+								</div>
+							</div>
+                            <p>SkYe</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Yoru.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Yoru.png);"></div>
+								</div>
+							</div>
+                            <p>Yoru</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Astra.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Astra.png);"></div>
+								</div>
+							</div>
+                            <p>Astra</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/KAYO.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/KAYO.png);"></div>
+								</div>
+							</div>
+                            <p>KAY/O</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Chamber.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Chamber.png);"></div>
+								</div>
+							</div>
+                            <p>Chamber</p>
+                        </div>
+                        <div class="swiper-slide showcase-carousel__item">
+							<div class="showcase-carousel__image-wrapper">
+								<div class="showcase-carousel__image-left">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Neon.png);"></div>
+								</div>
+								<div class="showcase-carousel__image-right">
+									<div class="showcase-carousel__image" style="background-image: url(assets/img/valorant/Valorant/Neon.png);"></div>
+								</div>
+							</div>
+                            <p>Neon</p>
                         </div>
 
                     </div>
@@ -68,6 +234,7 @@
 
             </div>
         </div>
+
         <video src=".//assets/video/smoke-background-optimized.mp4" id="showcase__video" class="showcase__conteint-video" autoplay loop muted></video>
     </section>
 
